hphp/test/zend/good/Zend/tests/use_const/conflicting_use.php.expectf

Fatal error: Cannot use const bar\baz as baz because the name is already in use in %s/conflicting_use.php on line 12
